--- a/删除文件目录命令.md
+++ b/删除文件目录命令.md
@@ -15,5 +15,9 @@ del /s /q 目录(如e:/test)
 
 rd /s /q 目录(如e:/test)
 
+##递归删除
+
+forfiles /p "E:\git_repo\spush" /s /m "*.iml" /c "cmd /c del /q /s @path"
+
 # linux
 rm -rf 目录(如/tmp/test)
